line spacing correction

--- a/css/main.scss
+++ b/css/main.scss
@@ -218,7 +218,7 @@ section{
 .featured-desc, .featured-desc2{
     font-weight: 500;
     font-size: .75em;
-    line-height: .50em;
+    line-height: 100%;
 }
 .featured-desc2{
     margin-bottom: 3em;
@@ -294,7 +294,7 @@ section{
 }
 .about-desc, .about-desc2, .about-desc3{
     font-size: .8em;
-    line-height: .5em;
+    line-height: 100%;
 }
 .about-desc3{
     margin-top: -2em;
